message CrdtReference {
    repeated bytes pathToRoot = 1;
}

message DefaultSerializerMessage {
  oneof value {
    bytes bsonValue = 1;
    CrdtReference crdtValue = 2;
    bool undefinedValue = 3;
  }
}

message OptionalSerializerMessage {
  required bool isPresent = 1;
  optional bytes valueIfPresent = 2;
}
