message CObjectSave {
  map<string, bytes> childSaves = 1;
  optional bytes objectSave = 2;
}
